5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1764_2390.log
== TEST (2019-05-30 10:08:46) 
-- CODE:
from numpy import*
freq = array(eval(input("frequencia aos meses do ano: ")))
falta = array(eval(input("faltas durante os meses do ano: ")))
i = 0 # posicao do vetor
mes = 1 #contador de meses
while(i<size(freq)):
	if(freq[i] == max(freq))
		mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 7
    if(freq[i] == max(freq))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:10) 
-- CODE:
from numpy import*
freq = array(eval(input("frequencia aos meses do ano: ")))
falta = array(eval(input("faltas durante os meses do ano: ")))
i = 0 # posicao do vetor
mes = 1 #contador de meses
fmax = max(freq)
while(i<size(freq)):
	if(freq[i] == fmax):
		mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:11:35) 
-- CODE:
from numpy import*
freq = array(eval(input("frequencia aos meses do ano: ")))
falta = array(eval(input("faltas durante os meses do ano: ")))
i = 0 # posicao do vetor
mes = 1 #contador de meses
fmax = max(freq)
while(i<size(freq)):
	if(freq[i] == fmax):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.418021
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
2
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:12:59) 
-- CODE:
from numpy import*
freq = array(eval(input("frequencia aos meses do ano: ")))
falta = array(eval(input("faltas durante os meses do ano: ")))
i = 0 # posicao do vetor
#mes = 1 #contador de meses
fmax = max(freq)
while(i<size(freq)):
	if(freq[i] == fmax):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:14:12) 
-- CODE:
from numpy import*
freq = array(eval(input("frequencia aos meses do ano: ")))
falta = array(eval(input("faltas durante os meses do ano: ")))
i = 0 # posicao do vetor
#mes = 1 #contador de meses
fmax = max(freq)
while(i<size(freq)):
	if(freq[i] == fmax):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.481072
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
